clear database option internationalization

--- a/src/languages/english.properties
+++ b/src/languages/english.properties
@@ -91,3 +91,6 @@ AccueilPanelTaskLibelle = Tasks
 AccueilPanelTaskResultat = Result
 
 TasksExecutionTitle = Tasks exections
+
+title_question=Question
+question_clear_database = Delete all the databases
