--- a/src/languages/english.properties
+++ b/src/languages/english.properties
@@ -94,3 +94,4 @@ TasksExecutionTitle = Tasks exections
 
 title_question=Question
 question_clear_database = Delete all the databases
+question_clear_tasks_history = Clear all tasks execution history ?
