--- a/src/languages/french.properties
+++ b/src/languages/french.properties
@@ -93,3 +93,4 @@ TasksExecutionTitle = Historique des ex\u00e9cutions de la t\u00e2che
 
 title_question=Question
 question_clear_database=Etes-vous sur de vouloir purger la liste des serveurs ? Cela aura pour effet de supprimer l'ensemble des bases de donn\u00e9es de la liste.
+question_clear_tasks_history = Purger l'historique des t\u00e2ches ?
